<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Login</string>
    <string name="pick_account">Pick Account</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="parse_app_id">uXNe2kO8BuPKGuhLNF4zhMH1VD2YyIVPfjn5h9ZM</string>
    <string name="parse_client_key">plrTKpseHWkO1eLnn0OzMrV1lnhdv6DRRY8brqlS</string>

    <string name="add_contact">Add Contact</string>
    <string name="username">username</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="search">Search</string>
    <string name="add_by_qr">QR</string>
    <string name="your_qr_code">Your QR code</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_account">Create Account</string>
    <string name="lower_username">username</string>
    <string name="password">Password</string>
    <string name="lower_password">password</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="done">Done</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="create_profile">Create Profile</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_lower">email</string>
    <string name="postal_address">Address</string>
    <string name="social_profile">Social Profile</string>
    <string name="close">Close</string>
    <string name="revoke">Revoke</string>
    <string name="edit_profile">edit profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="update_location">Update Location</string>
    <string name="login_existing_account">Log in with existing account</string>

</resources>
