<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.contact.activities.LandingActivity">

    <item android:id="@+id/action_update_location"
          android:title="@string/update_location"
          android:orderInCategory="80"
          app:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_compass"

        />

    <item android:id="@+id/action_create_profile"
          android:title="@string/EditProfile"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_edit"

          />
    <item android:id="@+id/action_log_out"
        android:title="@string/log_out"
        android:orderInCategory="110"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_lock_power_off" />
</menu>
