<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.contact.fragments.login.CreateAccountFragment">

    <View
        android:id="@+id/vTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btLogin"
        style="?pageBackground"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:text="@string/login_label"
        style="?button"/>

    <LinearLayout
        android:layout_above="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/app_name"
            android:textColor="@color/icons"
            android:gravity="center"
            android:textSize="44sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_lower"
            style="?editText"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/lower_username"
            style="?editText">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/lower_password"
            style="?editText"/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:gravity="center"
            android:fontFamily="Amiri"
            android:clickable="true"
            style="?textSubheader"/>
        </LinearLayout>



    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
