<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codepath.contact.fragments.CreateProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@android:drawable/alert_dark_frame"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/btDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/btDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvMiddleName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/etFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etMiddleName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/etFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvLastName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/etMiddleName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_below="@+id/etMiddleName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvCompany"
            android:layout_below="@+id/etLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etCompany"
            android:layout_below="@+id/etLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvPhoneType"
            android:layout_below="@+id/etCompany"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spPhoneType"
            android:layout_below="@+id/etCompany"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/contact_types"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_toRightOf="@+id/spPhoneType"
            android:layout_below="@+id/etCompany"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_toRightOf="@+id/spPhoneType"
            android:layout_below="@+id/etCompany"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvEmailType"
            android:layout_below="@+id/etPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spEmailType"
            android:layout_below="@+id/etPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/contact_types"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_toRightOf="@+id/spEmailType"
            android:layout_below="@+id/etPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_toRightOf="@+id/spEmailType"
            android:layout_below="@+id/etPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvAddressType"
            android:layout_below="@+id/etEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spAddressType"
            android:layout_below="@+id/etEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/contact_types"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_toRightOf="@+id/spAddressType"
            android:layout_below="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_toRightOf="@+id/spAddressType"
            android:layout_below="@+id/etEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/postal_address"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvSocialProfileType"
            android:layout_below="@+id/etAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spSocialProfileType"
            android:layout_below="@+id/etAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/contact_types"/>

        <TextView
            android:id="@+id/tvSocialProfile"
            android:layout_toRightOf="@+id/spSocialProfileType"
            android:layout_below="@+id/etAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/etSocialProfile"
            android:layout_toRightOf="@+id/spSocialProfileType"
            android:layout_below="@+id/etAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/social_profile"
            android:layout_margin="5dp"/>

        <TextView android:id="@+id/tvMapTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/spSocialProfileType"
            android:text="Last Reported Location"
            android:textSize="20sp"
            />
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@id/tvMapTitle"

            />

    </RelativeLayout>
</ScrollView>