<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:id="@+id/vPalette"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="?pageBackground" />

    <EditText android:id="@+id/etAddContactUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:layout_toLeftOf="@+id/btnSearchContactButton"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@id/btnSearchContactButton"
        android:hint="@string/username"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        />
    <Button android:id="@+id/btnSearchContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/search"
        />

    <Button
        android:id="@+id/btnAddByQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_by_qr"
        android:layout_below="@+id/btnSearchContactButton"
        android:layout_alignRight="@+id/btnSearchContactButton"
        android:layout_alignEnd="@+id/btnSearchContactButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivQRCode"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/etAddContactUsername" />

    <ProgressBar
        android:id="@+id/pbTryingRequest"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivQRCode"
        android:layout_centerHorizontal="true" />

</RelativeLayout>